syntax = "proto3";

option java_multiple_files = true;
option java_package = "sirjin.machine.proto";

package sirjinmachine;

message TimeChartDataUpdated {
  string shopId = 1;
  string ncId = 2;
  string datetime = 3;
  string status = 4;
  string regdt = 5;
  string pgmNm = 6;
  float spdLd = 7;
}

